# TinyTales

./: ANIMATED_IMAGES_IMPROVEMENTS.md  README.md  test_animated_images.py  test_simple_animated_images.py
llm/: Dockerfile  Makefile  README_execute_method.md  config.toml  pip.conf  pyproject.toml  requirements.txt  sample.env  test_complete_flow.py  test_complete_story.py  test_execute_method.py  test_execute_structure.py  test_generate_story.py  test_image_generation.py  test_ollama_direct.py  test_simple_prompt.py
llm/app/: main.py
llm/app/auth/: sso.py
llm/app/core/: config.py  discovery.py  interfaces.py
llm/app/llm/: manager.py
llm/scripts/: create_tool.py  validate_tool.py
llm/tools/generate_story/: __init__.py  image_generator.py  schemas.py  tool.py
llm/tools/generate_story/prompts/: __init__.py  story_generation.py  summarize.yaml  test.yaml
llm/tools/sample_tool/: Readme.md  config.toml  schemas.py  tool.py
llm/tools/sample_tool/prompts/: analyze.yaml  summarize.yaml
orchestor/: .env.example  README.md  app.py  requirements.txt  run.py  test_api.py
orchestor/llm_venv/: pyvenv.cfg
web/: README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.tsx
web/src/components/: StoryDisplay.tsx  StoryForm.tsx
web/src/services/: api.ts
web/src/types/: index.ts
